# cloud-forensics-utils

./: .gitignore  .mypy.ini  .pylintrc  .style.yapf  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements-all.txt  requirements-aws.txt  requirements-azure.txt  requirements-base.txt  requirements-dev.txt  requirements-gcp.txt  requirements.txt  run_tests.py  run_tests.sh  setup.py
.github/workflows/: install_test.yml  install_test_coverage.yml  install_test_setup_py.yml  pylint.yml  pylint_and_mypy.yml  pypi_push.yml  pythonapp.yml
config/linux/: jenkins_libcloudforensics_install.sh
docs/: Makefile  conf.py  contributing.md  gettingstarted.md  index.md  index.rst  requirements.txt
docs/source/: libcloudforensics.providers.aws.internal.rst  libcloudforensics.providers.aws.rst  libcloudforensics.providers.azure.internal.rst  libcloudforensics.providers.azure.rst  libcloudforensics.providers.gcp.internal.rst  libcloudforensics.providers.gcp.rst  libcloudforensics.providers.rst  libcloudforensics.rst  libcloudforensics.scripts.rst  modules.rst
docs/usermanual/: index.md
examples/: aws_cli.py  aws_cloudtrail.py  aws_snapshot.py  az_cli.py  cli.py  gcp_cli.py  libcloudforensics.py
libcloudforensics/: __init__.py  aws.py  errors.py  gcp.py  gcp_test.py  logging_utils.py  prompts.py
libcloudforensics/providers/: forensics_interface.py  kubernetes.py
libcloudforensics/scripts/: ebs_snapshot_copy_aws.sh  forensics_packages_startup.sh  startup.sh  utils.py  (+1 more)
scripts/: startup.sh
tests/: e2e.py  gcp_test.py  run_tests.py
tools/: aws_cli.py  az_cli.py  cli.py  gcp_cli.py
(+118 files in other folders)
